[Abhinav]ADD: added the functionality of sending notifications
